package com.ponomarev.tamagotchi.food;

public interface IFoodFactory {
    IFood Create();
}
